--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/pwa": "^3.3.2",
     "@nuxtjs/sitemap": "^2.4.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.14.11",
     "nuxt-webfontloader": "^1.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/vuetify": "^1.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^1.19.1"
   }
 }
